--- a/source/assets/css/basic.less
+++ b/source/assets/css/basic.less
@@ -543,7 +543,7 @@ input#search-query {
     border-radius: 30px;
     color: rgba(255, 255, 255, 1);
     font-weight: 400;
-    background: rgba(205, 221, 247, 0.1);
+    background: rgba(205, 221, 247, 0.15);
     font-family: 'Brandon';
 
     &::-ms-clear {
